crates/runtime/src/tests/snapshots/query_select_all_replace_value.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * REPLACE ('DEPT-' || department_id AS department_id) FROM employee_table;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                Wildcard(
                                    WildcardAdditionalOptions {
                                        wildcard_token: TokenWithSpan {
                                            token: Mul,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                        opt_ilike: None,
                                        opt_exclude: None,
                                        opt_except: None,
                                        opt_replace: Some(
                                            ReplaceSelectItem {
                                                items: [
                                                    ReplaceSelectElement {
                                                        expr: BinaryOp {
                                                            left: Value(
                                                                SingleQuotedString(
                                                                    "DEPT-",
                                                                ),
                                                            ),
                                                            op: StringConcat,
                                                            right: Identifier(
                                                                Ident {
                                                                    value: "department_id",
                                                                    quote_style: None,
                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                },
                                                            ),
                                                        },
                                                        column_name: Ident {
                                                            value: "department_id",
                                                            quote_style: None,
                                                            span: Span(Location(0,0)..Location(0,0)),
                                                        },
                                                        as_keyword: true,
                                                    },
                                                ],
                                            },
                                        ),
                                        opt_rename: None,
                                    },
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Table {
                                        name: ObjectName(
                                            [
                                                Ident {
                                                    value: "employee_table",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ],
                                        ),
                                        alias: None,
                                        args: None,
                                        with_hints: [],
                                        version: None,
                                        with_ordinality: false,
                                        partitions: [],
                                        json_path: None,
                                    },
                                    joins: [],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Projection: * REPLACE ('DEPT-' || department_id AS department_id)",
            "  TableScan: employee_table",
        ],
    ),
    Ok(
        [
            "+-------------+------------+------------+---------------+",
            "| employee_id | last_name  | first_name | department_id |",
            "+-------------+------------+------------+---------------+",
            "| 101         | Montgomery | Pat        | DEPT-1        |",
            "| 102         | Levine     | Terry      | DEPT-2        |",
            "| 103         | Comstock   | Dana       | DEPT-2        |",
            "+-------------+------------+------------+---------------+",
        ],
    ),
)
