crates/runtime/src/tests/snapshots/query_select_as.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT pi() * 2.0 * 2.0 AS area_of_circle;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                ExprWithAlias {
                                    expr: BinaryOp {
                                        left: BinaryOp {
                                            left: Function(
                                                Function {
                                                    name: ObjectName(
                                                        [
                                                            Ident {
                                                                value: "pi",
                                                                quote_style: None,
                                                                span: Span(Location(0,0)..Location(0,0)),
                                                            },
                                                        ],
                                                    ),
                                                    uses_odbc_syntax: false,
                                                    parameters: None,
                                                    args: List(
                                                        FunctionArgumentList {
                                                            duplicate_treatment: None,
                                                            args: [],
                                                            clauses: [],
                                                        },
                                                    ),
                                                    filter: None,
                                                    null_treatment: None,
                                                    over: None,
                                                    within_group: [],
                                                },
                                            ),
                                            op: Multiply,
                                            right: Value(
                                                Number(
                                                    "2.0",
                                                    false,
                                                ),
                                            ),
                                        },
                                        op: Multiply,
                                        right: Value(
                                            Number(
                                                "2.0",
                                                false,
                                            ),
                                        ),
                                    },
                                    alias: Ident {
                                        value: "area_of_circle",
                                        quote_style: None,
                                        span: Span(Location(0,0)..Location(0,0)),
                                    },
                                },
                            ],
                            into: None,
                            from: [],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Projection: pi() * Float64(2) * Float64(2) AS area_of_circle",
            "  EmptyRelation",
        ],
    ),
    Ok(
        [
            "+--------------------+",
            "| area_of_circle     |",
            "+--------------------+",
            "| 12.566370614359172 |",
            "+--------------------+",
        ],
    ),
)
