crates/runtime/src/tests/snapshots/query_select_date_add_diff.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT dateadd(day, 5, '2025-06-01')\""
---
(
    Statement(
        Query(
            Query {
                with: None,
                body: Select(
                    Select {
                        select_token: TokenWithSpan {
                            token: Word(
                                Word {
                                    value: "SELECT",
                                    quote_style: None,
                                    keyword: SELECT,
                                },
                            ),
                            span: Span(Location(1,1)..Location(1,7)),
                        },
                        distinct: None,
                        top: None,
                        top_before_distinct: false,
                        projection: [
                            UnnamedExpr(
                                Function(
                                    Function {
                                        name: ObjectName(
                                            [
                                                Identifier(
                                                    Ident {
                                                        value: "dateadd",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                ),
                                            ],
                                        ),
                                        uses_odbc_syntax: false,
                                        parameters: None,
                                        args: List(
                                            FunctionArgumentList {
                                                duplicate_treatment: None,
                                                args: [
                                                    Unnamed(
                                                        Expr(
                                                            Value(
                                                                ValueWithSpan {
                                                                    value: SingleQuotedString(
                                                                        "day",
                                                                    ),
                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    Unnamed(
                                                        Expr(
                                                            Value(
                                                                ValueWithSpan {
                                                                    value: Number(
                                                                        "5",
                                                                        false,
                                                                    ),
                                                                    span: Span(Location(1,21)..Location(1,22)),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    Unnamed(
                                                        Expr(
                                                            Value(
                                                                ValueWithSpan {
                                                                    value: SingleQuotedString(
                                                                        "2025-06-01",
                                                                    ),
                                                                    span: Span(Location(1,24)..Location(1,36)),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                clauses: [],
                                            },
                                        ),
                                        filter: None,
                                        null_treatment: None,
                                        over: None,
                                        within_group: [],
                                    },
                                ),
                            ),
                        ],
                        into: None,
                        from: [],
                        lateral_views: [],
                        prewhere: None,
                        selection: None,
                        group_by: Expressions(
                            [],
                            [],
                        ),
                        cluster_by: [],
                        distribute_by: [],
                        sort_by: [],
                        having: None,
                        named_window: [],
                        qualify: None,
                        window_before_qualify: false,
                        value_table_mode: None,
                        connect_by: None,
                        flavor: Standard,
                    },
                ),
                order_by: None,
                limit: None,
                limit_by: [],
                offset: None,
                fetch: None,
                locks: [],
                for_clause: None,
                settings: None,
                format_clause: None,
            },
        ),
    ),
    Ok(
        [
            "Projection: dateadd(Utf8(\"day\"), Int64(5), Utf8(\"2025-06-01\"))",
            "  EmptyRelation",
        ],
    ),
    Ok(
        [
            "+--------------------------------------------------+",
            "| dateadd(Utf8(\"day\"),Int64(5),Utf8(\"2025-06-01\")) |",
            "+--------------------------------------------------+",
            "| 2025-06-06T00:00:00                              |",
            "+--------------------------------------------------+",
        ],
    ),
)
